--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rock+Salt&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
@@ -18,7 +16,6 @@
 </head>
 
 <body>
-
   <navbar>
     <div class="js-navbar navbar">
       <div class="navbar__header">
@@ -39,22 +36,22 @@
     </div>
   </navbar>
 
-  <section class="homeSection homeSection--first hero">
+  <section class="homeSection homeSection--first homeHero hero">
     <div class="container">
       <div class="row hero__main-row">
         <div class="hero__wrapper">
           <div class="col-12">
             <div class="hero__left">
               <h1 class="hero__title">You are what you eat!</h1>
-              <button class="hero__button">
-                Get some food <i class="hero__button-icon fas fa-hamburger faa-burst animated-hover"></i>
+              <button class="homeHero__button">
+                Get some food <i class="homeHero__button-icon fas fa-hamburger faa-burst animated-hover"></i>
               </button>
             </div>
           </div>
           <div class="col-12">
-            <div class="hero__right">
-              <div class="hero__img-wrapper">
-                <img class="hero__img" src="/images/breakfast_full.jpg" alt="sandwich">
+            <div class="homeHero__right">
+              <div class="homeHero__img-wrapper">
+                <img class="homeHero__img" src="/images/breakfast_full.jpg" alt="sandwich">
               </div>
             </div>
           </div>
