--- a/src/recepies.html
+++ b/src/recepies.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <script type="text/javascript" src="js/script.js"></script>
   <link rel="stylesheet" href="./font-awesome-animation.min.css">
-  <title>You are what you eat</title>
+  <title>Recepies</title>
 </head>
 
 <body>
@@ -110,6 +110,7 @@
 
         </div>
       </div>
+    </div>
   </section>
 
   <section class="recipesSection recipesSection--smaller hero" id="vegetarianRece">
@@ -136,6 +137,7 @@
             </ul>
           </div>
         </div>
+      </div>
       </div>
   </section>
 
