--- a/src/recepies.html
+++ b/src/recepies.html
@@ -126,7 +126,7 @@
           <div class="dietRecipes__list">
             <ul>
               <li>
-                <a>Lorem ipsun</a>
+                <a href="recepie.html" class="dietType__link">Mushroom-Quinoa Buger</a>
               </li>
               <li>
                 <a>Lorem ipsun</a>
