--- a/src/contact.html
+++ b/src/contact.html
@@ -60,6 +60,20 @@
           <div class="contact__map" id="map">
           </div>
         </div>
+        <div class="contacts">
+            <h3>Follow us on Social Media:</h3>
+            <ul class="contacts__social">
+              <li><a href="#" class="fa fa-instagram"></a></li>
+              <li><a href="#" class="fa fa-facebook"></a></li>
+              <li><a href="#" class="fa fa-twitter"></a></li>
+              <li><a href="#" class="fa fa-pinterest"></a></li>
+            </ul>
+            <div class="address">
+              <h2>Address:</h2>
+              Mayor Street Lower,
+              International Financial Services Centre, Dublin
+            </div>
+        </div>
       </div>
     </div>
   </section>
