--- a/src/recepies.html
+++ b/src/recepies.html
@@ -51,7 +51,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#vegetarianRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_veget_op.jpg">
                 </a>
               </div>
               <a class="dietType__link" href="#vegetarianRece">Vegetarian</a>
@@ -61,7 +61,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#veganRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_vegan_op.jpg">
                 </a>
               </div>
               <a class="dietType__link" href="#veganRece">Vegan</a>
@@ -71,7 +71,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#gluFreeRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_gluten_op.jpg">
                 </a>
               </div>
               <a class="dietType__link" href="#gluFreeRece">Gluten Free</a>
@@ -81,7 +81,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#paleoRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_paleo_op.jpg">
                 </a>
               </div>
               <a class="dietType__link" href="#paleoRece">Paleo</a>
@@ -91,7 +91,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#pesceRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_pesce_op.jpg">
                 </a>
               </div>
               <a class="dietType__link" href="#pesceRece">Pescetarian</a>
@@ -101,7 +101,7 @@
             <div class="dietType">
               <div class="dietType__animation">
                 <a href="#detoxRece">
-                  <img class="dietType__img" src="Images/vegetarian_cate.jpg">
+                  <img class="dietType__img" src="Images/recepies/cate_detox_op.gif">
                 </a>
               </div>
               <a class="dietType__link" href="#detoxRece">Detox</a>
@@ -122,17 +122,17 @@
           </div>
         </div>
         <div class="dietRecipes dietRecipes--imgLeft">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_veget_op.jpg">
           <div class="dietRecipes__list">
             <ul>
               <li>
                 <a href="recepie.html" class="dietType__link">Mushroom-Quinoa Buger</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a class="dietType__link">Lorem ipsun</a>
               </li>
               <li>
-                <a>Lorem ipsun</a>
+                <a class="dietType__link">Lorem ipsun</a>
               </li>
             </ul>
           </div>
@@ -150,7 +150,7 @@
           </div>
         </div>
         <div class="dietRecipes">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_vegan_op.jpg">
           <div class="dietRecipes__list">
             <ul>
               <li>
@@ -178,7 +178,7 @@
           </div>
         </div>
         <div class="dietRecipes dietRecipes--imgLeft">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_gluten_op.jpg">
           <div class="dietRecipes__list">
             <ul>
               <li>
@@ -206,7 +206,7 @@
           </div>
         </div>
         <div class="dietRecipes">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_paleo_op.jpg">
           <div class="dietRecipes__list">
             <ul>
               <li>
@@ -234,7 +234,7 @@
           </div>
         </div>
         <div class="dietRecipes dietRecipes--imgLeft">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_pesce_op.jpg">
           <div class="dietRecipes__list">
             <ul>
               <li>
@@ -262,7 +262,7 @@
           </div>
         </div>
         <div class="dietRecipes">
-          <img class="dietRecipes__img" src="Images/vegetarian_cate.jpg">
+          <img class="dietRecipes__img" src="Images/recepies/cate_detox_op.gif">
           <div class="dietRecipes__list">
             <ul>
               <li>
