--- a/src/footer.html
+++ b/src/footer.html
@@ -2,7 +2,9 @@
   <div class="container footer__container">
     <div class="row">
       <div class="col-12 col-3-md">
-        <a href="#home" class="footer__logo">LOGO</a>
+        <a href="/" class="footer__logo">
+          <img class="footer__logo-img" src="./Images/logo.svg" alt="logo">
+        </a>
       </div>
       <div class="col-12 col-3-md">
         <div class="footer__list">
