--- a/src/beachbod.html
+++ b/src/beachbod.html
@@ -4,38 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
-  <script type="text/javascript" src="js/script.js"></script>
-  <link rel="stylesheet" href="./font-awesome-animation.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/vendors/font-awesome-animation.min.css">
   <title>Beach Bod Basics</title>
 </head>
 
-<body>
-  <navbar>
-    <div class="js-navbar navbar">
-      <div class="navbar__header">
-        <a href="/" class="navbar__logo">LOGO</a>
-        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </span>
-      </div>
 
-      <div class="navbar__list">
-        <a href="index.html" class="navbar__link">Home</a>
-        <a href="lifestyle.html" class="navbar__link">Lifestyle</a>
-        <a href="recipes.html" class="navbar__link">Recipes</a>
-        <a href="calculator.html" class="navbar__link">Calculator</a>
-        <a href="about.html" class="navbar__link">About</a>
-        <a href="contact.html" class="navbar__link">Contact</a>
-      </div>
-    </div>
-  </navbar>
-  <br><br><br><br>
+<body>
+  <div id="header">
+  </div>
+  <br><br><br><br><br>
 
 
   <section class="blog container">
@@ -55,8 +36,8 @@
       <img src="Images/weights.jpg" alt="weights" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
         <strong>Increase your lifting weight!</strong> You should strive to add more weight to the bar/machine/dumbells, etc.. each week.
-          I can't stress the importance of this! Even if it’s the smallest of increases, you’re still adding on more weight which will lead to progressive overload.
-          Generally, I would recommend trying to increase by 1.25-2.5kg each week on all movements that you feel comfortable to do so!
+        I can't stress the importance of this! Even if it’s the smallest of increases, you’re still adding on more weight which will lead to progressive overload.
+        Generally, I would recommend trying to increase by 1.25-2.5kg each week on all movements that you feel comfortable to do so!
       </div>
     </div>
 
@@ -65,8 +46,8 @@
       <img src="Images/increase_reps.jpg" alt="Increasing Reps" class="paragraph__img paragraph__img--left">
       <div class="paragraph__text paragraph__text--right">
         <strong>Increase your reps!</strong> You’ll be happy to hear this.. you don’t always <strong>need</strong> to increase weight! Another great way you can progress is by
-          increasing the number of reps per set. So say for example if you’ve been going 3 sets of 10 for a while now, increase it to 3 sets of 12, and BAM!
-          You’ve applied progressive overload! Let the gains begin! The when those 3 sets of 12 get easy, that means an increase in weight needs to be made.
+        increasing the number of reps per set. So say for example if you’ve been going 3 sets of 10 for a while now, increase it to 3 sets of 12, and BAM!
+        You’ve applied progressive overload! Let the gains begin! The when those 3 sets of 12 get easy, that means an increase in weight needs to be made.
       </div>
     </div>
 
@@ -74,7 +55,7 @@
       <h4 class="paragraph__title">Thirdly..</h4>
       <img src="Images/technique.jpg" alt="improving technique" class="paragraph__img paragraph__img--right">
       <div class="paragraph__text paragraph__text--left">
-      <strong>Improve technique!</strong>This is another really good form of progressive overload, especially if you want to make sure you continue using the right
+        <strong>Improve technique!</strong>This is another really good form of progressive overload, especially if you want to make sure you continue using the right
         muscle groups and prevent injury! Your form needs to be picture perfect before you can increase weight on all movements. A good que I like to use is the last rep of
         a set should look exactly like the first! If that’s not the case for you then you may be going a little too heavy and there may be some ego-lifting going on! Drop the weight friend,
         no one is judging you! It will always be a bigger pay off to have your form correct, than to be lifting heavier weights incorrectly.
@@ -98,36 +79,12 @@
     </p>
   </section>
 
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="row">
-        <div class="col-12 col-3-md">
-          <a href="#home" class="footer__logo">LOGO</a>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#recipes" class="footer__link">Recipes</a>
-            <a href="#blog" class="footer__link">Blog</a>
-            <a href="#calculator" class="footer__link">Calculator</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#lifestyle" class="footer__link">Lifestyle</a>
-            <a href="#contact" class="footer__link">Contact</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__contact-wrapper">
-            <div class="footer__social-media">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-pinterest-p"></i>
-            </div>
-            <div class="footer__contact">
-              <p>5 Fitzgerald Street, Harold's Cross,</p>
-              <p>Dublin 6, D08X65 </p>
+  <div id="footer">
+  </div>
+
+  <script src="js/vendors/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
