--- a/src/index.html
+++ b/src/index.html
@@ -107,10 +107,10 @@
       </div>
     </div>
     <div class="sliderImg">
-        <img class="sliderImg__image js-intro__image" src="images/shake.jpg" alt="">
-        <div class="sliderImg__wrapperText">
-          <h5 class="sliderImg__text">Healthy food can be fun!</h5>
-        </div>
+      <img class="sliderImg__image js-intro__image" src="images/shake.jpg" alt="">
+      <div class="sliderImg__wrapperText">
+        <h5 class="sliderImg__text">Healthy food can be fun!</h5>
+      </div>
     </div>
   </section>
 
@@ -118,34 +118,82 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="three-block__title">Recipies Lorem Ipsum</h2>
-          <div class="row">
-            <div class="col-12 col-4-lg">
-              <div class="three-block__box three-block__box--first">
-                <h3 class="three-block__subtitle">Hello Food</h3>
-                <p class="three-block__text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+          <h2 class="three-block__title">Eat Healthy</h2>
+          <div class="three-block__wrapper">
+            <div class="three-block__box three-block__box--first">
+              <h3 class="three-block__subtitle">Food Diversity</h3>
+              <p class="three-block__text">
+                Have your weekly menu include as many healthy but different products as possible. Then you will be sure that you supply the body with all the ingredients it needs to function. Every day provide your body with protein, complex
+                carbohydrates, healthy fats and as many vegetables as possible.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
             </div>
-            <div class="col-12 col-4-lg">
-              <div class="three-block__box three-block__box--second">
-                <h3 class="three-block__subtitle">Hello Food</h3>
-                <p class="three-block__text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+
+            <div class="three-block__box three-block__box--second">
+              <h3 class="three-block__subtitle">Seasonality</h3>
+              <p class="three-block__text">
+                Eat vegetables, preferably seasonal. Raw and warm. You can combine them with protein or carbohydrates. They should occupy most of your plate. To find out what’s harvested seasonally in your area, go to <a href="www.localharvest.org"
+                  target="_blank"> www.localharvest.org </a>to find farmers’ markets near you and seasonal produce guides.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
             </div>
-            <div class="col-12 col-4-lg">
-              <div class="three-block__box three-block__box--third">
-                <h3 class="three-block__subtitle">Hello Food</h3>
-                <p class="three-block__text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
+
+            <div class="three-block__box three-block__box--third">
+              <h3 class="three-block__subtitle">Fat is Good</h3>
+              <p class="three-block__text">
+                Don’t be afraid of fat, these made from plants are healthy and necessary to absorb vitamins. Which is best? Coconut oil, ghee butter, olive oil,flax seed oil, avocado oil. In fact, healthy fats play a huge role in helping you manage
+                your moods, stay on top of your mental game, fight fatigue, and even control your weight.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="imagesRoll">
+    <img class="imagesRoll__img" src="/images/avocado.jpg" alt="avocado">
+    <img class="imagesRoll__img" src="/images/berries.jpg" alt="berries">
+    <img class="imagesRoll__img" src="/images/carrot.jpg" alt="carrot">
+    <img class="imagesRoll__img" src="/images/kiwi.jpg" alt="kiwi">
+    <img class="imagesRoll__img" src="/images/orange.jpg" alt="orange">
+    <img class="imagesRoll__img" src="/images/apples.jpg" alt="apples">
+    <img class="imagesRoll__img" src="/images/bananas.jpg" alt="bananas">
+    <img class="imagesRoll__img" src="/images/parsley.jpg" alt="parsley">
+  </section>
+
+  <section class="homeSection homeSection--third three-block">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="three-block__title">Keep Fit</h2>
+          <div class="three-block__wrapper">
+            <div class="three-block__box three-block__box--fitfirst">
+              <h3 class="three-block__subtitle">Food Diversity</h3>
+              <p class="three-block__text">
+                Choose different forms of physical activity. The easiest way to do this is in a fitness club offering different types of workouts, but exercising at home or outdoors can also provide you with variety. It is important to move and
+                develop all muscle groups.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
+            </div>
+
+            <div class="three-block__box three-block__box--fitsecond">
+              <h3 class="three-block__subtitle">Seasonality</h3>
+              <p class="three-block__text">
+                Take care of your spine. At least during one workout a week you should practice yoga, pilates, swimming or other forms of exercise that emphasize spine gymnastics and care for the muscles that hold it. Many illnesses and sufferings in
+                the middle age are caused by neglect of the spine. It is not only the main element of our skeleton, but also a vital part of the nervous and energetic systems.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
+            </div>
+
+            <div class="three-block__box three-block__box--fitthird">
+              <h3 class="three-block__subtitle">Fat is Good</h3>
+              <p class="three-block__text">
+                If you are just starting or have had a long break, adjust your body slowly to the effort. Throwing yourself on deep water can discourage you and harm your health. Start slowly, enter a continuous training cycle calmly. Do not assume
+                that after a week you will run easily and you will lose 2 kilograms.
+              </p>
+              <a class="three-block__btn" href="" name="button">Read more...</a>
             </div>
           </div>
         </div>
