added more info to the calculator page

--- a/src/calculator.html
+++ b/src/calculator.html
@@ -56,7 +56,8 @@
             </p>
             <input class="form__submit" type="submit" value="GetBMI" onclick="computeBMI();">
             <h1>Your BMI is: <span id="output">...</span></h1>
-            <h2>This means you are: <span id="comment">...</span> </h2>
+            <h2>This means you are: <span id="remark">...</span> </h2>
+            <p>**NOTE: BMI calculations are only accurate if you haven't actively put on muscle mass through bodybuilding or other intesive physical activites</p>
           </div>
         </div>
         <div class="col col-6-md">
