--- a/src/about.html
+++ b/src/about.html
@@ -4,34 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <link rel="stylesheet" href="css/styles.css">
-
-  <script type="text/javascript" src="js/script.js"></script>
+  <link rel="stylesheet" href="css/vendors/font-awesome-animation.min.css">
   <title>You are what you eat</title>
 </head>
 
 <body>
+  <div id="header">
+  </div>
 
-  <navbar>
-    <div class="js-navbar navbar">
-      <div class="navbar__header">
-        <a href="#home" class="navbar__logo">LOGO</a>
-        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </span>
-      </div>
-
-      <div class="navbar__list">
-        <a href="index.html" class="navbar__link">Home</a>
-        <a href="#recipes" class="navbar__link">Recipes</a>
-        <a href="#blog" class="navbar__link">Blog</a>
-        <a href="calculator.html" class="navbar__link">Calculator</a>
-        <a href="contact.html" class="navbar__link">Contact</a>
-        <a href="about.html" class="navbar__link">About</a>
-        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
-      </div>
-    </div>
-  </navbar>
   <section class="about">
     <div class="container">
       <div class="row">
@@ -43,16 +27,16 @@
               would like to pass on these experiences to others who may not know where to begin. There are many different diet types with a great number of people
               who swear by each of them for different reasons, so we thought we would compile our thoughts and opinions on each one listed for anyone and everyone to
               digest.
-            <p>
               <p>
-                As we were listing out thoughts and experiences on these varying diets we got the idea to also list a bunch of recipes that we have enjoyed over the years
-                that are not too difficult to make! After all it's no fun to have to eat the same exact meals everyday, as even if they are
-                just as good for you no matter how many times you eat them, it can get very boring eating avacado with every meal (even though we love avacado!)
-              </p>
-              <p>
-                We sincerly hope you enjoyed browsing our website and have learned something new towars living a healthier and happier life!
-                And if you would like to contact us about anything, please visit our <a href="contact.html"> contact page</a>. <em>Happy eating!</em>
-              </p>
+                <p>
+                  As we were listing out thoughts and experiences on these varying diets we got the idea to also list a bunch of recipes that we have enjoyed over the years
+                  that are not too difficult to make! After all it's no fun to have to eat the same exact meals everyday, as even if they are
+                  just as good for you no matter how many times you eat them, it can get very boring eating avacado with every meal (even though we love avacado!)
+                </p>
+                <p>
+                  We sincerly hope you enjoyed browsing our website and have learned something new towars living a healthier and happier life!
+                  And if you would like to contact us about anything, please visit our <a href="contact.html"> contact page</a>. <em>Happy eating!</em>
+                </p>
           </div>
         </div>
         <div class="col col-6-md">
@@ -64,42 +48,12 @@
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="row">
-        <div class="col-12 col-3-md">
-          <a href="#home" class="footer__logo">LOGO</a>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#recipes" class="footer__link">Recipes</a>
-            <a href="#blog" class="footer__link">Blog</a>
-            <a href="#calculator" class="footer__link">Calculator</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#lifestyle" class="footer__link">Lifestyle</a>
-            <a href="#contact" class="footer__link">Contact</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__contact-wrapper">
-            <div class="footer__social-media">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-pinterest-p"></i>
-            </div>
-            <div class="footer__contact">
-              <p>5 Fitzgerald Street, Harold's Cross,</p>
-              <p>Dublin 6, D08X65 </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+  <div id="footer">
+  </div>
+
+  <script src="js/vendors/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
