--- a/src/contact.html
+++ b/src/contact.html
@@ -4,34 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Prompt:400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>You are what you eat</title>
-
+  <link rel="stylesheet" href="css/vendors/font-awesome-animation.min.css">
+  <title>Contact | You are what you eat</title>
 </head>
 
 <body>
-  <navbar>
-    <div class="js-navbar navbar">
-      <div class="navbar__header">
-        <a href="#home" class="navbar__logo">LOGO</a>
-        <span href="javascript:void(0);" class="navbar__button" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </span>
-      </div>
-
-      <div class="navbar__list">
-        <a href="index.html" class="navbar__link">Home</a>
-        <a href="#recipes" class="navbar__link">Recipes</a>
-        <a href="#blog" class="navbar__link">Blog</a>
-        <a href="calculator.html" class="navbar__link">Calculator</a>
-        <a href="contact.html" class="navbar__link">Contact</a>
-        <a href="about.html" class="navbar__link">About</a>
-        <a href="#lifestyle" class="navbar__link">Lifestyle</a>
-      </div>
-    </div>
-  </navbar>
+  <div id="header">
+  </div>
   <br><br><br><br>
+
 
   <section class="contact">
     <div class="contact__container container">
@@ -51,7 +36,7 @@
 
               <label for="subject">Subject:</label>
               <textarea class="form__textarea" id="subject" name="subject" placeholder="Ask away!" style="height:200px"></textarea>
-              
+
               <input class="form__submit" type="submit" value="Submit">
             </form>
           </div>
@@ -60,67 +45,45 @@
           <div class="contact__map" id="map">
           </div>
         </div>
-        <div class="contacts">
-            <h3>Follow us on Social Media:</h3>
-            <ul class="contacts__social">
-              <li><a href="#" class="fa fa-instagram"></a></li>
-              <li><a href="#" class="fa fa-facebook"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-pinterest"></a></li>
-            </ul>
-            <div class="address">
-              <h2>Address:</h2>
-              Mayor Street Lower,
-              International Financial Services Centre, Dublin
+        <div class="col-12">
+          <div class="contact__details">
+            <div>
+              <h3>Give us a call! </h3>
+              <p>
+                (236) 875-4633
+              </p>
+              <h5>Contact Hours</h5>
+              <ul>
+                <li>Monday - Friday: 8am - 5pm </li>
+                <li>Saturday: 10am - 4pm </li>
+              </ul>
+
             </div>
+            <div class="contact__address">
+              <h4>Address</h4>
+              5 Fitzgerald Street, Harold's Cross, <br />
+              Dublin 6, D08X65 <br />
+              Ireland <br> <br>
+              <div class="contact__social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-pinterest-p"></i></a>
+              </div>
+              </br />
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
+  <div id="footer">
+  </div>
 
-
-  <footer class="footer">
-    <div class="container footer__container">
-      <div class="row">
-        <div class="col-12 col-3-md">
-          <a href="#home" class="footer__logo">LOGO</a>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#recipes" class="footer__link">Recipes</a>
-            <a href="#blog" class="footer__link">Blog</a>
-            <a href="#calculator" class="footer__link">Calculator</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__list">
-            <a href="#about" class="footer__link">About</a>
-            <a href="#lifestyle" class="footer__link">Lifestyle</a>
-            <a href="#contact" class="footer__link">Contact</a>
-          </div>
-        </div>
-        <div class="col-12 col-3-md">
-          <div class="footer__contact-wrapper">
-            <div class="footer__social-media">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-pinterest-p"></i>
-            </div>
-            <div class="footer__contact">
-              <p>5 Fitzgerald Street, Harold's Cross,</p>
-              <p>Dublin 6, D08X65 </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-  <script type="text/javascript" src="js/script.js"></script>
-  <script type="text/javascript" src="js/map.js"></script>
+  <script src="js/vendors/jquery.min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe42PsLaFQTDrhnjMxB03nzbYTze5f8ls&callback=initMap"></script>
-
+  <script src="https://kit.fontawesome.com/f45d831e1a.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
