--- a/src/index.html
+++ b/src/index.html
@@ -121,30 +121,30 @@
           <h2 class="three-block__title">Eat Healthy</h2>
           <div class="three-block__wrapper">
             <div class="three-block__box three-block__box--first">
-              <h3 class="three-block__subtitle">Food Diversity</h3>
+              <h3 class="three-block__subtitle">Pillars of Healthy Eating</h3>
               <p class="three-block__text">
                 Have your weekly menu include as many healthy but different products as possible. Then you will be sure that you supply the body with all the ingredients it needs to function. Every day provide your body with protein, complex
                 carbohydrates, healthy fats and as many vegetables as possible.
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="pillars-food.html" name="button">Read more...</a>
             </div>
 
             <div class="three-block__box three-block__box--second">
-              <h3 class="three-block__subtitle">Seasonality</h3>
+              <h3 class="three-block__subtitle">Kitchen Staples</h3>
               <p class="three-block__text">
                 Eat vegetables, preferably seasonal. Raw and warm. You can combine them with protein or carbohydrates. They should occupy most of your plate. To find out what’s harvested seasonally in your area, go to <a href="www.localharvest.org"
                   target="_blank"> www.localharvest.org </a>to find farmers’ markets near you and seasonal produce guides.
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="staples.html" name="button">Read more...</a>
             </div>
 
             <div class="three-block__box three-block__box--third">
-              <h3 class="three-block__subtitle">Fat is Good</h3>
+              <h3 class="three-block__subtitle">Lean Eating</h3>
               <p class="three-block__text">
-                Don’t be afraid of fat, these made from plants are healthy and necessary to absorb vitamins. Which is best? Coconut oil, ghee butter, olive oil,flax seed oil, avocado oil. In fact, healthy fats play a huge role in helping you manage
+                Lean eating is good but don’t be afraid of fat, these made from plants are healthy and necessary to absorb vitamins. Which is best? Coconut oil, ghee butter, olive oil,flax seed oil, avocado oil. In fact, healthy fats play a huge role in helping you manage
                 your moods, stay on top of your mental game, fight fatigue, and even control your weight.
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="leaneating.html" name="button">Read more...</a>
             </div>
           </div>
         </div>
@@ -170,30 +170,27 @@
           <h2 class="three-block__title">Keep Fit</h2>
           <div class="three-block__wrapper">
             <div class="three-block__box three-block__box--fitfirst">
-              <h3 class="three-block__subtitle">Food Diversity</h3>
+              <h3 class="three-block__subtitle">Myths Busted </h3>
               <p class="three-block__text">
-                Choose different forms of physical activity. The easiest way to do this is in a fitness club offering different types of workouts, but exercising at home or outdoors can also provide you with variety. It is important to move and
-                develop all muscle groups.
+              Much of the time, one of the first steps many people take when attempting to lose weight is to begin working out, which is great! But very often, this workout includes lifting a high amount of lightweight repetitions to burn fat.
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="mythsbusted.html" name="button">Read more...</a>
             </div>
 
             <div class="three-block__box three-block__box--fitsecond">
-              <h3 class="three-block__subtitle">Seasonality</h3>
+              <h3 class="three-block__subtitle">Beach Bod </h3>
               <p class="three-block__text">
-                Take care of your spine. At least during one workout a week you should practice yoga, pilates, swimming or other forms of exercise that emphasize spine gymnastics and care for the muscles that hold it. Many illnesses and sufferings in
-                the middle age are caused by neglect of the spine. It is not only the main element of our skeleton, but also a vital part of the nervous and energetic systems.
+                So today im going to keep it short and sweet and give you a few simple (but effective) facts for building that Greek God bod! By following this approach you’ll not only sky rocket your metabolism but you'll also increase your resting heart rate and burn twice as many calories in a day, leading to that perfect beach bod!
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="beachbod.html" name="button">Read more...</a>
             </div>
 
             <div class="three-block__box three-block__box--fitthird">
-              <h3 class="three-block__subtitle">Fat is Good</h3>
+              <h3 class="three-block__subtitle">Pillars of Activity</h3>
               <p class="three-block__text">
-                If you are just starting or have had a long break, adjust your body slowly to the effort. Throwing yourself on deep water can discourage you and harm your health. Start slowly, enter a continuous training cycle calmly. Do not assume
-                that after a week you will run easily and you will lose 2 kilograms.
+              Choose different forms of physical activity. The easiest way to do this is in a fitness club offering different types of workouts, but exercising at home or outdoors can also provide you with variety. It is important to move and develop all muscle groups.
               </p>
-              <a class="three-block__btn" href="" name="button">Read more...</a>
+              <a class="three-block__btn" href="pillars-activity.html" name="button">Read more...</a>
             </div>
           </div>
         </div>
