--- a/src/lifestyle.html
+++ b/src/lifestyle.html
@@ -20,43 +20,70 @@
   <br>
   <br>
   <section>
+    <div class="container lifestyle">
     <h1>Lifestyle</h1>
-    <div class="container">
       <div class="row">
-        <div class="col-12 col-3-xl">
-          <a href="staples.html"> <img src="images\kitchen.jpg" alt="Kitchen" height="200" width="280"></a>
-          <h3 class="blog__title">Kitchen Staples</h3>
+        <div class="col-12 col-3-lg lifestyle__box">
+          <a href="staples.html"> <img src="images/kitchen.jpg" alt="Kitchen"></a>
+          <h5 class="blog__title">Kitchen Staples</h5>
           <p class="">No matter who you are, or what you eat, there are certain items you just have to have in your kitchen to help make sticking
             to your chosen diet that little bit easier! <a href="staples.html"> Click here</a> to find out just what you need!
           </p>
         </div>
 
-        <div class="col-12 col-3-xl">
-          <a href="mythsbusted.html"> <img src="images\fatloss.jpg" alt="Training" height="200" width="280"></a>
-          <h3>Myths Busted - Fatloss Edition!</h3>
+        <div class="col-12 col-3-lg lifestyle__box">
+          <a href="mythsbusted.html"> <img src="images/fatloss.jpg" alt="Training"></a>
+          <h5>Myths Busted!</h5>
           <p class="blog__text_Myths_Busted">We've heard all the myths there are, "carbs make you fat", "eating at night is bad for you", "you can't get enough protein to build muscle if you're vegan", "blah, blah, blah"
             But you can't believe everything you hear, especially when it comes to health and fitness. There is no "one size fits all". With that in mind,
             lets bust two of what I consider to be the craziest of myths out there! <a href="mythsbusted.html"> Click Here</a>
           </p>
         </div>
 
-        <div class="col-12 col-3-xl">
+        <div class="col-12 col-3-lg lifestyle__box">
           <a href="leaneating.html">
-            <img src="images\prep.jpg" alt="Lean Eating" hegiht="200" width="280">
+            <img src="images/prep.jpg" alt="Lean Eating">
           </a>
-          <h3>Lean Eating</h3>
+          <h5>Lean Eating</h5>
           <p class="blog__text_Lean_Eating">One of the most difficult things to do when trying to stick to a diet / lose weight / build muscle is lean eating!
             But there are things you can do to make this easier! <a href="leaneating.html"> Click here</a> to view 8 simple tips for lean eating.
           </p>
         </div>
 
-        <div class="col-12 col-3-xl">
+        <div class="col-12 col-3-lg lifestyle__box">
           <a href="beachbod.html">
-            <img src="images\beachbod.jpg" alt="Lean Eating" height="200" width="280">
+            <img src="images/beachbod.jpg" alt="beachbod">
           </a>
-          <h3>Beach Bod Basics</h3>
+          <h5>Beach Bod Basics</h5>
           <p class="blog__text_Beach_Bod">We're all here because we're trying to do our best for our bodies, but for those of you who are trying to
             create works of art out of yours, <a href="beachbod.html">click here</a> for three helpful hints on how to achieve this!
+          </p>
+        </div>
+
+        <div class="col-12 col-3-lg lifestyle__box">
+          <a href="pillars-food.html">
+            <img src="images\meal.jpg" alt="meal" />
+          </a>
+          <h5>Pillars - Good Food</h5>
+          <p class="blog__text_Lean_Eating">Have your weekly menu include as many healthy but different products as possible. Then you will be sure that you supply the body with all the ingredients it needs to function.
+          </p>
+        </div>
+
+        <div class="col-12 col-3-lg lifestyle__box">
+          <a href="beachbod.html">
+            <img src="images/run.jpg" alt="Pillars - Activity" />
+          </a>
+          <h5>Pillars - Activity </h5>
+          <p class="blog__text_Beach_Bod">Choose different forms of physical activity. The easiest way to do this is in a fitness club offering different types of workouts,
+          </p>
+        </div>
+
+        <div class="col-12 col-3-lg lifestyle__box">
+          <a href="pillars-psychical.html">
+            <img src="images/happiness.jpg" alt="Pillars - Psychical">
+          </a>
+          <h5>Pillars - Psychical Balance</h5>
+          <p class="blog__text_Beach_Bod">If you are addicted to something (alcohol, cigarettes, unhealthy food, work, games, etc.) – go to the clinic as soon as possible or try to get out of it yourself.
           </p>
         </div>
       </div>
