--- a/src/mythsbusted.html
+++ b/src/mythsbusted.html
@@ -21,15 +21,17 @@
 
     <h1 class="blog__title">Myths Busted - Fatloss Edition!</h1>
     <div class="mythbusted-slider">
+
       <div class="mythbusted-slider__slide mythbusted-slider__fade js-mythbusted-slide">
         <div class="mythbusted-slider__counter">1/2</div>
-        <img src="images\myth1.jpg" alt="Fitness" width="100%" height="auto">
+        <img src="images\fit.jpg" alt="Fitness" width="100%" height="auto">
       </div>
 
       <div class="mythbusted-slider__slide mythbusted-slider__fade js-mythbusted-slide">
         <div class="mythbusted-slider__counter">2/2</div>
-        <img src="images\myth2.jpg" alt="Fitness" width="100%" height="auto">
+        <img src="images\fit2.jpg" alt="Fitness" width="100%" height="auto">
       </div>
+
     </div>
 
     <div class="mythbusted-slider__dots">
