--- a/src/pillars-food.html
+++ b/src/pillars-food.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/animated-icons/icons/stop/stop.json">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/vendors/font-awesome-animation.min.css">
-  <title>You are what you eat</title>
+  <title>PIllars Food | You are what you eat</title>
 </head>
 
 <body>
